--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,17 @@
 body {
-  background-color: #555555;
+  background-color: #E1C9CD;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: "BainsleyBoldItalic";
   font-size: 1rem;
   font-weight: 600;
+}
+
+ol, ul {
+  list-style:none;
+  margin:0px;
+  padding:0px;
 }
 
 p {
@@ -108,6 +114,220 @@ header > .right {
 #banner p {
   font-size: 1.5rem;
   text-shadow: black 2px 3px 4px;
+}
+
+.main-agileinfo{
+	margin:50px auto;
+	width:50%;
+}
+
+.sap_tabs{
+	clear:both;
+	padding: 0;
+}
+
+.resp-tabs-list {
+    list-style: none;
+    padding: 15px 0px;
+    margin: 0 auto;
+    text-align: center;
+	background: #C41E3A;
+}
+
+.resp-tab-item {
+  font-size: 1.1em;
+  font-weight: 500;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0;
+  text-align: center;
+  list-style: none;
+  outline: none;
+  transition: all 0.3s;
+  text-transform: uppercase;
+  margin: 0 1.2em 0;
+	color:#b1b1b1;
+	padding:7px 15px;
+}
+
+.resp-tab-active {
+	color:#fff;
+}
+
+.resp-tabs-container {
+	padding: 0px;
+	clear: left;
+}
+
+h2.resp-accordion {
+	cursor: pointer;
+	padding: 5px;
+	display: none;
+}
+
+.resp-tab-content {
+	display: none;
+}
+
+.resp-content-active, .resp-accordion-active {
+   display: block;
+}
+
+form {
+    background:rgba(3, 3, 3, 0.57);
+    padding: 25px;
+}
+
+h3 {
+    font-size: 16px;
+    color:#000000;
+    margin-bottom: 7px;
+}
+
+.from,.to,.date,.depart,.return {
+	width:48%;
+	float:left;
+}
+
+.from,.to,.date {
+	margin-bottom:40px;
+}
+
+.from,.date,.depart {
+	margin-right:4%;
+}
+
+.clear {
+  clear:both;
+}
+
+input[type="text"] {
+	padding:10px;
+	width:93%;
+	float:left;
+}
+
+input#datepicker,input#datepicker1,input#datepicker2 {
+  width: 85%;
+	margin-bottom:10px;
+}
+
+select#w3_country1 {
+  padding: 10px;
+	float:left;
+}
+
+.quantity-select .entry.value-minus {
+    margin-left: 0;
+}
+.value-minus, .value-plus {
+    height: 40px;
+    line-height: 24px;
+    width: 40px;
+    margin-right: 3px;
+    display: inline-block;
+    cursor: pointer;
+    position: relative;
+    font-size: 18px;
+    color: #fff;
+    text-align: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    border: 1px solid #b2b2b2;
+    vertical-align: bottom;
+}
+
+.value {
+    cursor: default;
+    width: 40px;
+    height:33px;
+    color: #000;
+    line-height: 24px;
+    border: 1px solid #E5E5E5;
+    background-color: #fff;
+    text-align: center;
+    display: inline-block;
+    margin-right: 3px;
+	padding-top:7px;
+}
+
+.quantity-select .entry.value-minus:hover, .quantity-select .entry.value-plus:hover {
+    background: #E5E5E5;
+}
+
+.quantity-select .entry.value-minus:before, .quantity-select .entry.value-plus:before {
+    content: "";
+    width: 13px;
+    height: 2px;
+    background: #000;
+    left: 50%;
+    margin-left: -7px;
+    top: 50%;
+    margin-top: -0.5px;
+    position: absolute;
+}
+
+.quantity-select .entry.value-plus:after {
+    content: "";
+    height: 13px;
+    width: 2px;
+    background: #000;
+    left: 50%;
+    margin-left: -1.4px;
+    top: 50%;
+    margin-top: -6.2px;
+    position: absolute;
+}
+
+input[type="submit"] {
+  font-size: 14px;
+  color: #fff;
+  background:#C41E3A;
+  border: none;
+  outline: none;
+  padding: 10px 20px;
+  margin-top: 50px;
+	cursor:pointer;
+	transition: 0.5s all ease;
+}
+
+input[type="submit"]:hover  {
+    background:#212121;
+	color:#fff;
+}
+
+.numofppl,.adults,.child {
+	width:50%;
+	float:left;
+}
+
+.class {
+	width:48%;
+	float:left;
+}
+
+#footer {
+  background-color: #111111;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 0.5rem 0 0.5rem 0 ;
+}
+
+#footer a {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+  padding: 0;
+}
+
+#footer a:hover {
+    color: #ce1b28;
+}
+
+#footer .copyright {
+  border-top: 1px solid;
+  font-size: 0.8rem;
+  opacity: 0.5;
+  padding: 2rem 0;
+  text-align: center;
 }
 
 @font-face {
