Полностью готова регистрация и авторизация пользователей

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,7 @@
 </head>
 <body>
   <header>
-    <a class="logo" href="index.html">Aerosales</a>
+    <a class="logo" href="/">Aerosales</a>
     <a class="right" href="orders.html"><i class="fas fa-list-alt"></i> Заказы</a>
 	  <a sec:authorize="isAuthenticated()" class="right" th:href="@{/logout}"><i class="fas fa-sign-out-alt"></i> Выйти</a>
 	  <a sec:authorize="isAnonymous()" class="right" th:href="@{/login}"><i class="fas fa-sign-in-alt"></i> Войти</a>
@@ -73,7 +74,7 @@
 								<div class="clear"></div>
 							</div>
 							<div class="clear"></div>
-							<input type="submit" value="Search Flights">
+							<input type="submit" value="Найти рейсы">
 						</form>
 					</div>
 					<div class="tab-1 resp-tab-content oneway">
