--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="font-awesome/css/all.css">
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/font-awesome/css/all.css">
   <title>Список заказов</title>
 </head>
 <body>
   <header>
-    <a class="logo" href="index.html">Aerosales</a>
+    <a class="logo" href="/">Aerosales</a>
     <a class="right" href="orders.html"><i class="fas fa-list-alt"></i> Заказы</a>
-    <a class="right" href="login.html"><i class="fas fa-sign-in-alt"></i> Войти</a>
+    <a sec:authorize="isAuthenticated()" class="right" th:href="@{/logout}"><i class="fas fa-sign-out-alt"></i> Выйти</a>
+    <a sec:authorize="isAnonymous()" class="right" th:href="@{/login}"><i class="fas fa-sign-in-alt"></i> Войти</a>
   </header>
+  <section id="banner">
+    <div class="inner">
+      <h1>Список заказов</h1>
+    </div>
+  </section>
   <footer id="footer">
     <div class="inner">
       <p>Aerosales - сервис, который создан в 2021 году для быстрой покупки билетов на самолёт в любой город мира, где есть аэропорт. Я надеюсь, что всё работает нормально.</p>
