--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="class">
                             <h3>Класс</h3>
-                            <select id="w3_country1" name="travel_class" onchange="change_country(this.value)" class="frm-field required">
+                            <select id="w3_country" name="travel_class" onchange="change_country(this.value)" class="frm-field required">
                                 <option value="ECO">Эконом</option>
                                 <option value="BUS">Бизнес</option>
                             </select>
@@ -105,16 +105,14 @@
                                 <h3>Количество пассажиров:</h3>
                                 <div class="quantity">
                                     <div class="quantity-select">
-                                        <div class="entry value-minus">&nbsp;</div>
                                         <input type="number" name="tickets_amount" placeholder="1">
-                                        <div class="entry value-plus active">&nbsp;</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="clear"></div>
                         </div>
                         <div class="clear"></div>
-                        <input type="submit" value="Search Flights">
+                        <input type="submit" value="Искать рейсы">
                     </form>
                 </div>
             </div>
