--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -21,6 +21,26 @@
       <h1>Список заказов</h1>
     </div>
   </section>
+  <table>
+    <tr>
+      <th>Рейс</th>
+      <th>Длительность (часов)</th>
+      <th>Время вылета</th>
+      <th>Время прилёта</th>
+      <th>Класс обслуживания</th>
+      <th>Цена</th>
+      <th>Статус</th>
+    </tr>
+    <tr th:each="fl : ${user.flightDetailsList}">
+      <td th:text="${fl.flightName}"/>
+      <td th:text="${fl.flightDuration}"/>
+      <td th:text="${fl.deptDate}"/>
+      <td th:text="${fl.arrivalDate}"/>
+      <td th:text="${fl.travelClass}"/>
+      <td th:text="${fl.price}"/>
+      <td><h3>Оплачено</h3></td>
+    </tr>
+  </table>
   <footer id="footer">
     <div class="inner">
       <p>Aerosales - сервис, который создан в 2021 году для быстрой покупки билетов на самолёт в любой город мира, где есть аэропорт. Я надеюсь, что всё работает нормально.</p>
