--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -22,9 +22,10 @@
     </div>
 </section>
 <form th:action="@{/registration}" method="post">
+    <h3 th:text="${message}"></h3>
     <label><h3>Введите имя пользователя:</h3></label>
     <input type="text" placeholder="Введите имя пользователя" name="username" required><br>
-    <label><h3>Введите пароль: </h3></label>
+    <br><label><h3>Введите пароль: </h3></label>
     <input type="password" placeholder="Введите пароль" name="password" required>
     <input type="submit" value="Зарегистрироваться">
 </form>
